--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -8,10 +8,7 @@
     <title>Esputifu</title>
     <!-- <link rel="stylesheet" href="style/index.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="components/register/index.css">
-    <link rel="stylesheet" href="components/header/style.css">
-    <link rel="stylesheet" href="components/footer/style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
