--- a/staff/groups/abesti-enterprise/bertsolab/index.html
+++ b/staff/groups/abesti-enterprise/bertsolab/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>versoLab @ Skylab Coder</title>
     <link rel="stylesheet" href="style/index.css">
+    <link rel="shortcut icon" href="./style/images/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div id="root"></div>
