functioning fav button

--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -32,6 +32,7 @@
     <script src="logic/search-ingredient/index.js"></script>
     <script src="logic/show-category/index.js"></script>
     <script src="logic/toggle-fav-meal/index.js"></script>
+    <script src="logic/retrieve-fav-meal/index.js"></script>
 
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
@@ -48,6 +49,7 @@
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/recipe-details.jsx" type="text/babel"></script>
     <script src="components/categories.jsx" type="text/babel"></script>
+    <script src="components/favbutton.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/app.jsx" type="text/babel"></script>
