--- a/staff/groups/alf-&-co/app/SpecRunner.html
+++ b/staff/groups/alf-&-co/app/SpecRunner.html
@@ -20,6 +20,7 @@
   <script src="logic/search-movies/index.js"></script>
   <script src="logic/toggle-fav-movie/index.js"></script>
   <script src="logic/retrieve-fav-movies/index.js"></script> 
+  <script src="logic/create-list/index.js"></script> 
   
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
@@ -31,6 +32,7 @@
   <script src="logic/search-movies/index.spec.js"></script>
   <script src="logic/toggle-fav-movie/index.spec.js"></script>
   <script src="logic/retrieve-fav-movies/index.spec.js"></script> 
+  <script src="logic/create-list/index.spec.js"></script> 
 </head>
 
 <body>
