added search-advanced functioniality

--- a/staff/groups/skynews-sa/0/index.html
+++ b/staff/groups/skynews-sa/0/index.html
@@ -29,6 +29,7 @@
     <script src="logic/toggle-fav-art/index.js"></script>
     <script src="logic/testWeather/index.js"></script>
     <script src="logic/retrieve-fav-news/index.js"></script>
+    <script src="logic/search-advanced/index.js"></script>
 
     <!-- put all the component files -->
     <script src="components/app.jsx" type="text/babel"></script>
@@ -44,7 +45,7 @@
     <script src="components/spinner.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="components/weather.jsx" type="text/babel"></script>
-
+    <script src="components/search-advanced.jsx" type="text/babel"></script>
 
     <script src="components/modal/index.jsx" type="text/babel"></script>
 
