add new tests for toggle-list-movies

--- a/staff/groups/alf-&-co/app/SpecRunner.html
+++ b/staff/groups/alf-&-co/app/SpecRunner.html
@@ -21,6 +21,8 @@
   <script src="logic/toggle-fav-movie/index.js"></script>
   <script src="logic/retrieve-fav-movies/index.js"></script> 
   <script src="logic/create-list/index.js"></script> 
+  <script src="logic/retrieve-list/index.js"></script> 
+  <script src="logic/toggle-list-movies/index.js"></script> 
   
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
@@ -33,6 +35,8 @@
   <script src="logic/toggle-fav-movie/index.spec.js"></script>
   <script src="logic/retrieve-fav-movies/index.spec.js"></script> 
   <script src="logic/create-list/index.spec.js"></script> 
+  <script src="logic/retrieve-list/index.spec.js"></script> 
+  <script src="logic/toggle-list-movies/index.spec.js"></script> 
 </head>
 
 <body>
