updated favorites and categories

--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -50,6 +50,7 @@
     <script src="components/recipe-details.jsx" type="text/babel"></script>
     <script src="components/categories.jsx" type="text/babel"></script>
     <script src="components/favbutton.jsx" type="text/babel"></script>
+    <script src="components/favorites.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/app.jsx" type="text/babel"></script>
