--- a/staff/groups/skynews-sa/0/SpecRunner.html
+++ b/staff/groups/skynews-sa/0/SpecRunner.html
@@ -21,8 +21,9 @@
   <script src="logic/search-news/index.js"></script>
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/toggle-fav-art/index.js"></script>
-  <script src="logic/testWeather/index.js"></script>
+  <script src="logic/weather/index.js"></script>
   <script src="logic/retrieve-fav-news/index.js"></script>
+  <script src="logic/search-advanced/index.js"></script>
 
 
 
@@ -33,8 +34,9 @@
   <script src="logic/search-news/index.spec.js"></script>
   <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/toggle-fav-art/index.spec.js"></script>
-  <script src="logic/testWeather/index.spec.js"></script>
+  <script src="logic/weather/index.spec.js"></script>
   <script src="logic/retrieve-fav-news/index.spec.js"></script>
+  <script src="logic/search-advanced/index.spec.js"></script>
 
 </head>
 
