--- a/staff/groups/skynews-sa/0/index.html
+++ b/staff/groups/skynews-sa/0/index.html
@@ -27,7 +27,7 @@
     <script src="logic/search-news/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
     <script src="logic/toggle-fav-art/index.js"></script>
-    <script src="logic/testWeather/index.js"></script>
+    <script src="logic/weather/index.js"></script>
     <script src="logic/retrieve-fav-news/index.js"></script>
     <script src="logic/search-advanced/index.js"></script>
 
