--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -33,6 +33,7 @@
     <script src="logic/search-tracks/index.js" ></script>
     <script src="logic/retrieve-track/index.js" ></script>
     <script src="logic/toggle-fav-track/index.js"></script>
+    <script src="logic/retrieve-fav-tracks/index.js"></script>
     
     <!-- components -->
     <script src="components/app.jsx" type="text/babel" ></script>
