--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -25,6 +25,7 @@
   <script src="logic/search-tracks/index.js"></script>
   <script src="logic/retrieve-track/index.js"></script>
   <script src="logic/toggle-fav-track/index.js"></script>
+  <script src="logic/retrieve-fav-tracks/index.js"></script>
 
 
   <!-- include spec files here... -->
@@ -39,6 +40,7 @@
   <script src="logic/search-tracks/index.spec.js"></script>
   <script src="logic/retrieve-track/index.spec.js"></script>
   <script src="logic/toggle-fav-track/index.spec.js"></script>
+  <script src="logic/retrieve-fav-tracks/index.spec.js"></script>
 
 </head>
 
