--- a/staff/groups/abesti-enterprise/bertsolab/index.html
+++ b/staff/groups/abesti-enterprise/bertsolab/index.html
@@ -25,6 +25,8 @@
     <script src="logic/fav-toggle-song/index.js"></script>
     <script src="logic/retrieve-lyrics/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
+    <script src="logic/retrieve-fav-song/index.js"></script>
+
 
 
 
