--- a/staff/groups/abesti-enterprise/bertsolab/index.html
+++ b/staff/groups/abesti-enterprise/bertsolab/index.html
@@ -26,6 +26,7 @@
     <script src="logic/fav-toggle-song/index.js"></script>
     <script src="logic/retrieve-lyrics/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
+    <script src="https://kit.fontawesome.com/1b6290737d.js"></script>
 
 
 
