--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -9,10 +9,12 @@
     <!-- <link rel="stylesheet" href="style/index.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
+    <script src="https://kit.fontawesome.com/0ebe3f9bf2.js"></script>
 </head>
 
 <body>
     <div id="root"></div>
+
 
     <script src="vendor/react/16.8.6/react.development.js"></script>
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
