--- a/staff/groups/skynews-sa/0/SpecRunner.html
+++ b/staff/groups/skynews-sa/0/SpecRunner.html
@@ -24,6 +24,7 @@
   <script src="logic/weather/index.js"></script>
   <script src="logic/retrieve-fav-news/index.js"></script>
   <script src="logic/search-advanced/index.js"></script>
+  <script src="logic/retrieve-article/index.js"></script>
 
 
 
@@ -37,6 +38,7 @@
   <script src="logic/weather/index.spec.js"></script>
   <script src="logic/retrieve-fav-news/index.spec.js"></script>
   <script src="logic/search-advanced/index.spec.js"></script>
+  <script src="logic/retrieve-article/index.spec.js"></script>
 
 </head>
 
