--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -33,6 +33,7 @@
     <script src="logic/show-category/index.js"></script>
     <script src="logic/toggle-fav-meal/index.js"></script>
     <script src="logic/retrieve-fav-meal/index.js"></script>
+    <script src="logic/parser/index.js"></script>
 
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
