add component-documentation and update folder organization

--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -31,20 +31,20 @@
     <script src="logic/get-random/index.js"></script>
     
     <script src="components/app.jsx" type="text/babel"></script>
-    <script src="components/register-or-login.jsx" type="text/babel"></script>
-    <script src="components/landing.jsx" type="text/babel"></script>
-    <script src="components/register.jsx" type="text/babel"></script>
-    <script src="components/register-success.jsx" type="text/babel"></script>
-    <script src="components/login.jsx" type="text/babel"></script>
-    <script src="components/search.jsx" type="text/babel"></script>
-    <script src="components/categories.jsx" type="text/babel"></script>
-    <script src="components/random.jsx" type="text/babel"></script>
-    <script src="components/results.jsx" type="text/babel"></script>
-    <script src="components/gif-item.jsx" type="text/babel"></script>
-    <script src="components/gif-detail.jsx" type="text/babel"></script>
-    <script src="components/random-detail.jsx" type="text/babel"></script>
+    <script src="components/register-or-login/index.jsx" type="text/babel"></script>
+    <script src="components/landing/index.jsx" type="text/babel"></script>
+    <script src="components/register/index.jsx" type="text/babel"></script>
+    <script src="components/register-success/index.jsx" type="text/babel"></script>
+    <script src="components/login/index.jsx" type="text/babel"></script>
+    <script src="components/search/index.jsx" type="text/babel"></script>
+    <script src="components/categories/index.jsx" type="text/babel"></script>
+    <script src="components/random/index.jsx" type="text/babel"></script>
+    <script src="components/results/index.jsx" type="text/babel"></script>
+    <script src="components/gif-item/index.jsx" type="text/babel"></script>
+    <script src="components/gif-detail/index.jsx" type="text/babel"></script>
+    <script src="components/random-detail/index.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
-    <script src="components/fav-button.jsx" type="text/babel"></script>
+    <script src="components/fav-button/index.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
