--- a/staff/groups/abesti-enterprise/bertsolab/SpecRunner.html
+++ b/staff/groups/abesti-enterprise/bertsolab/SpecRunner.html
@@ -11,31 +11,29 @@
   <script src="vendor/jasmine/jasmine-3.4.0/jasmine-html.js"></script>
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
-  <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
   <script src="utils/validate/index.js"></script>
   <script src="logic/index.js"></script>
  
   <script src="logic/register-user/index.js"></script>
   <script src="logic/authenticate-user/index.js"></script>
-  <!-- <script src="logic/retrieve-user/index.js"></script> -->
   <script src="logic/search-songs/index.js"></script> 
   <script src="logic/retrieve-lyrics/index.js"></script>
   <script src="logic/toggle-fav-track/index.js"></script> -->
-  <!-- <script src="logic/retrieve-favorite-ducks/index.js"></script> -->
   <script src="logic/cover-retrieve/index.js"></script>
+  <script src="logic/retrieve-user/index.js"></script>
+  
    
-  <!-- include spec files here... -->
+
   <script src="utils/call/index.spec.js"></script> -->
   <script src="logic/cover-retrieve/index.spec.js"></script>
   <script src="logic/index.spec.js"></script>
   <script src="logic/register-user/index.spec.js"></script>
   <script src="logic/authenticate-user/index.spec.js"></script>
-  <!-- <script src="logic/retrieve-user/index.spec.js"></script> -->
   <script src="logic/search-songs/index.spec.js"></script>
   <script src="logic/retrieve-lyrics/index.spec.js"></script>
   <script src="logic/toggle-fav-track/index.spec.js"></script>
-  <!-- <script src="logic/retrieve-favorite-ducks/index.spec.js"></script> -->
+  <script src="logic/retrieve-user/index.spec.js"></script>
 
 </head>
 
