--- a/staff/groups/chuck-and-sons/chuck-project/index.html
+++ b/staff/groups/chuck-and-sons/chuck-project/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Saira+Stencil+One|Special+Elite&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+    <!-- sytles -->
     <link rel="stylesheet" href="style/index.css">
+
     <title>Chuck generator</title>
 </head>
 
