--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 
-<body>
+<body class="body">
     <div id="root"></div>
 
     <script src="vendor/react/16.8.6/react.development.js"></script>
