add images and intro readme

--- a/staff/felipe-fernandez/fantasy-soccer-skylab/fantasy-soccer-skylab-design/player-detail.html
+++ b/staff/felipe-fernandez/fantasy-soccer-skylab/fantasy-soccer-skylab-design/player-detail.html
@@ -21,10 +21,10 @@
 
     <div class="player">
         <img class="img" src="" alt="">IMG</img>
-        <p class="name">Nombre</p>
-        <p class="position">Posición</p>
-        <p class="points">Puntos</p>
-        <p class="value">Valor</p>   
+        <p class="name">Name</p>
+        <p class="position">Position</p>
+        <p class="points">Points</p>
+        <p class="value">Value</p>   
     </div>
     
     <footer class="mainfooter">
