change name branch and some little changes

--- a/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/index.html
+++ b/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Fantasy soccer skylab</title>
+    <title>Fantasy football skylab</title>
 </head>
 <body class="bg">
     
-    <header class="header-app header-access">FANTASY SOCCER SKYLAB</header>
+    <header class="header-app header-access">FANTASY FOOTBALL SKYLAB</header>
     <h2>The soccer fantasy game for all the enthusiastics of football</h2>
     
     <div class="links">
