--- a/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/login.html
+++ b/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/login.html
@@ -9,7 +9,7 @@
     <title>Login</title>
 </head>
 <body>
-        <header class="header-app header-access">FANTASY SOCCER SKYLAB</header>
+        <header class="header-app header-access">FANTASY FOOTBALL SKYLAB</header>
     
     <form >
         <div class="form-inputs">
