--- a/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/register-success.html
+++ b/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/register-success.html
@@ -9,7 +9,7 @@
     <title>Register success</title>
 </head>
 <body>
-    <header class="header-app header-access">FANTASY SKYLAB</header>
+    <header class="header-app header-access">FANTASY FOOTBALL SKYLAB</header>
     
     <section class="register-successful">
         <p>User registered successful</p>
