--- a/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/team.html
+++ b/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/team.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Mi liga</title>
+    <title>My leagues</title>
 </head>
 <body>
-        <header class="header-app">MY LEAGUE
+        <header class="header-app">MY LEAGUES
                 <nav class="navigation">
                     <a href="profile.html">Profile</a>
                     <a href="invite-friend.html">Invite a friend</a>
