--- a/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/invite-friend.html
+++ b/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/invite-friend.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/index.css">
 
-    <title>Profile</title>
+    <title>Invite a friend</title>
 </head>
 <body>
     <header class="header-app">MY LEAGUE
