--- a/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/myleagues.html
+++ b/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/myleagues.html
@@ -8,7 +8,7 @@
     <title>My league</title>
 </head>
 <body>
-        <header class="header-app header-access">FANTASY SOCCER SKYLAB      
+        <header class="header-app header-access">FANTASY FOOTBALL SKYLAB      
         </header>
         
         <h2>MY LEAGUE</h2>
