add a new page and some images

--- a/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/login.html
+++ b/staff/felipe-fernandez/fantasy-football-skylab/fantasy-football-skylab-design/login.html
@@ -23,7 +23,7 @@
           
     </form>
     <div class="links"></div>
-        <a href="myleagues.html">Log in</a>
+        <a href="create-league.html">Log in</a>
         <a href="index.html">Go back</a>
     </div>
     
