--- a/staff/oihane-unciti/my-project/desing/html/register-modal.html
+++ b/staff/oihane-unciti/my-project/desing/html/register-modal.html
@@ -12,7 +12,7 @@
         <div class="modal-content">
           <div class="modal__-header">
             <span class="close">&times;</span>
-            <h2>Register</h2>
+            <h2 class="register-title">Registrate</h2>
           </div>
           <div class="modal__body">
             <form action="">
@@ -24,7 +24,7 @@
                 <input type="email" name="email" id="">
                 <label for="">Contraseña</label>
                 <input type="text" name="password" id="">
-                <button>Registrate</button>
+                <button class= "button">Registrate</button>
             </form>
           </div>
         </div>
