democratum design 1st

--- a/staff/lluis-agusti/democratum/design/index.html
+++ b/staff/lluis-agusti/democratum/design/index.html
@@ -8,6 +8,6 @@
     <title>Democratum</title>
 </head>
 <body>
-    <img src="resources/logo-xl.png" alt="logo democratum">
+    <img class="image" src="resources/logo-xl.png" alt="logo democratum">
 </body>
 </html>
