--- a/staff/lluis-agusti/democratum/design/registersuccess.html
+++ b/staff/lluis-agusti/democratum/design/registersuccess.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="style/index.css">
     <title>Democratum Register Success</title>
 </head>
-<body>
-    
-</body>
+<body class="body">
+    <header>
+      <nav class="nav">
+        <a class="nav__h2" href="index.html"><h2 class="nav__h2">MenuPlanner</h2></a>
+        <a class="nav__icon" href="user-panel.html"><i class="far fa-user-circle"></i></a>
+      </nav>
+    </header>
+    <main class="main">
+        <section class="reg-success__section">
+            <p>User successfully registered, you can now proceed to <a href="" onClick="">Accede</a>.
+            </p>
+        </section>
+    </main>
+   </body>
 </html>
