--- a/staff/nestor-llorens/skycaching/design/landing/index.html
+++ b/staff/nestor-llorens/skycaching/design/landing/index.html
@@ -17,15 +17,17 @@
         <ul class='header__nav'>
             <li><button class='header__nav-item'>English</button></li>
             <li><button class='header__nav-item'>Log in</button></li>
-        </ul> 
+        </ul>
     </header>
     <main class='main'>
+        <section class='main__section'>
+            <h2 class='main__section-h'>Join the world's largest treasure hunt!</h2>
+            <p class='main__section-p'>Track down hidden treasures in the real world and capture them for points.
+                Whether you are a casual player, an avid explorer, or a hardcore competition enthusiast,
+                SkyCaching helps you rediscover the world around you.</p>
 
-        <p>Track down QR Codes hidden in the real world and capture them for points.
-        Whether you are a casual player, an avid explorer, or a hardcore competition enthusiast,
-         Munzee helps you rediscover the world around you.</p>
-        <!-- sign up -->
-        <button class='main__login'>Sign up</button>
+            <button class='main__section-register'>SIGN UP!</button>
+        </section>
     </main>
 </body>
 
