pre-update doc data model

--- a/staff/lluis-agusti/democratum/design/login.html
+++ b/staff/lluis-agusti/democratum/design/login.html
@@ -16,5 +16,10 @@
         <button class="main__button">Log In</button>
     </form>
     </section>
+    <div class="main">
+        <section class="reg-success__section">
+            <p>Do not have an account? <a href="register.html" >Sign Up</a>.</p>
+        </section>
+    </div>
 </body>
 </html>
