--- a/staff/lluis-agusti/democratum/design/pollnew.html
+++ b/staff/lluis-agusti/democratum/design/pollnew.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/index.css">
-    <title>Democratum New Poll</title>
-</head>
-<body>
-    
-</body>
-</html>
+        <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <meta http-equiv="X-UA-Compatible" content="ie=edge">
+                <link rel="stylesheet" href="style/index.css">
+                <title>Democratum Register</title>
+            </head>
+            <body class="body">
+                <header>
+                  <nav class="nav">
+                      <a class="nav__h2" href="index.html"><h2 class="nav__h2">Democratum</h2></a>
+                    <a class="nav__icon" href="user-panel.html"><i class="far fa-user-circle"></i></a>
+                  </nav>
+                </header>
+                <main class="main">
+                    <section class="form-section">
+                        <h1>Register</h1>
+                        <form class="form" onSubmit="">
+                          <label>Name<input type="text" name="name"></input></label>
+                          <label>Surname<input type="text" name="surname"></input></label>
+                          <label>Citizen ID<input type="file" name="citizenid"></input></label>
+                          <label>E-mail<input type="email" name="email"></input></label>
+                          <label>Password<input type="password" name="password"></input></label>
+                          <label>Repeat password<input type="password" name="repassword" /></label>
+                          <button class="main__button" >Registrar</button>
+                        </form>
+                    </section>
+                </main>
+               </body>
+            </html>
