--- a/staff/lluis-agusti/democratum/design/pollvotedsuccess.html
+++ b/staff/lluis-agusti/democratum/design/pollvotedsuccess.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style/index.css">
     <title>Democratum Poll Voted Success</title>
 </head>
-<body>
-    
+<body class="body">
+    <main class="main">
+        <img class="image" src="resources/results.png" width="300" height="366" alt="logo democratum">
+        <div class="main">
+                <section class="reg-success__section">
+                    <p>Thank you! <a href="polls.html" >Go Back</a>.</p>
+                </section>
+        </div>
+
+    </main>
 </body>
 </html>
