--- a/staff/lluis-agusti/democratum/design/register.html
+++ b/staff/lluis-agusti/democratum/design/register.html
@@ -10,7 +10,7 @@
 <body class="body">
     <header>
       <nav class="nav">
-          <a class="nav__h2" href="index.html"><h2 class="nav__h2">MenuPlanner</h2></a>
+          <a class="nav__h2" href="index.html"><h2 class="nav__h2">Democratum</h2></a>
         <a class="nav__icon" href="user-panel.html"><i class="far fa-user-circle"></i></a>
       </nav>
     </header>
@@ -24,7 +24,7 @@
               <label>E-mail<input type="email" name="email"></input></label>
               <label>Password<input type="password" name="password"></input></label>
               <label>Repeat password<input type="password" name="repassword" /></label>
-              <button class="main__button" >Registrar</button>
+              <button class="main__button" >Register</button>
             </form>
         </section>
     </main>
