--- a/staff/lluis-agusti/democratum/design/registersuccess.html
+++ b/staff/lluis-agusti/democratum/design/registersuccess.html
@@ -10,7 +10,7 @@
 <body class="body">
     <header>
       <nav class="nav">
-        <a class="nav__h2" href="index.html"><h2 class="nav__h2">MenuPlanner</h2></a>
+        <a class="nav__h2" href="index.html"><h2 class="nav__h2">Democratum</h2></a>
         <a class="nav__icon" href="user-panel.html"><i class="far fa-user-circle"></i></a>
       </nav>
     </header>
