--- a/staff/jorge-rodri/classty/design/student/exam-student/index.html
+++ b/staff/jorge-rodri/classty/design/student/exam-student/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <header class="header">
-        <img class="logo" src="../img/icon.png">
+        <img class="logo" src="../../img/icon.png">
         <nav class="nav__main--position">
             <ul class="nav__list--position">
-                <li><a href="message/index.html"><img src="../img/mail.png" alt="M"></a></li>
-                <li><a href="profile/index.html"><img src="../img/profile.png" alt="P"></a></li>
-                <li><a><img src="../img/logout.png" alt="P"></a></li>
+                <li><a href="message/index.html"><img src="../../img/mail.png" alt="M"></a></li>
+                <li><a href="profile/index.html"><img src="../../img/profile.png" alt="P"></a></li>
+                <li><a><img src="../../img/logout.png" alt="P"></a></li>
             </ul>
         </nav>
     </header>
