--- a/staff/juan-bovo/vltra/vltra-app/public/index.html
+++ b/staff/juan-bovo/vltra/vltra-app/public/index.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://kit.fontawesome.com/1b6290737d.js"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Vltra APP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
