--- a/staff/roger-perez/goliath/goliath-app/index.html
+++ b/staff/roger-perez/goliath/goliath-app/index.html
@@ -22,21 +22,14 @@
     <script src="logic/register-user/index.js"></script>
     <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
-    <script src="logic/search-ducks/index.js"></script>
-    <script src="logic/retrieve-duck/index.js"></script>
-    <script src="logic/toggle-fav-duck/index.js"></script>
-    <script src="logic/retrieve-fav-ducks/index.js"></script>
+
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
-    <script src="components/search.jsx" type="text/babel"></script>
-    <script src="components/results.jsx" type="text/babel"></script>
-    <script src="components/duck-item.jsx" type="text/babel"></script>
-    <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <script src="components/drumkit.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
-    <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
