--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/public/index.html
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/public/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="architecture, space, housing, social housing, collective housing, shared space"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
     <link href='https://fonts.googleapis.com/css?family=B612 Mono' rel='stylesheet'/>
-    <link rel="stylesheet" href="../../style/index.css" type="text/css"/>
+    <link rel="stylesheet" href="../src/style/index.css" type="text/css"/>
     <title>e-cohabitat</title>
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
