--- a/staff/roger-perez/goliath/goliath-app/index.html
+++ b/staff/roger-perez/goliath/goliath-app/index.html
@@ -15,6 +15,7 @@
     <script src="vendor/react/16.8.6/react.development.js"></script>
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
+    <script src="vendor/Tone.min.js"></script>
 
     <script src="utils/validate/index.js"></script>
     <script src="utils/call/index.js"></script>
@@ -29,6 +30,7 @@
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/drumkit.jsx" type="text/babel"></script>
+    <script src="components/sequence.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
