--- a/staff/roger-perez/goliath/goliath-app/index.html
+++ b/staff/roger-perez/goliath/goliath-app/index.html
@@ -23,8 +23,10 @@
     <script src="logic/register-user/index.js"></script>
     <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
+    <script src="logic/update-user/index.js"></script>
 
     <script src="components/app.jsx" type="text/babel"></script>
+    <script src="components/my-drumkits.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
