add new changes react-app

--- a/staff/roger-perez/goliath/goliath-app/index.html
+++ b/staff/roger-perez/goliath/goliath-app/index.html
@@ -7,14 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Goliath</title>
     <link rel="stylesheet" href="style/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
 
-    <script src="vendor/react/16.8.6/react.development.js"></script>
-    <script src="vendor/react/16.8.6/react-dom.development.js"></script>
-    <script src="vendor/babel/7.5.5/babel.min.js"></script>
+    
     <script src="vendor/Tone.min.js"></script>
 
     <script src="utils/validate/index.js"></script>
@@ -31,6 +30,7 @@
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/jamtrack.jsx" type="text/babel"></script>
     <script src="components/drumkit.jsx" type="text/babel"></script>
     <script src="components/sequence.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
