--- a/staff/juan-bovo/vltra/vltra-app/public/index.html
+++ b/staff/juan-bovo/vltra/vltra-app/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Vltra APP</title>
+    <title>Vltra APP - pase, postee, lea</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
